format change to xml